解决图标不显示

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Home</title>
 
-    <link rel="favicon" href="/Images/logo.png">
+    <link rel="favicon" href="../Images/logo.png">
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="Content/camera.css" rel="stylesheet" id='camera-css' type='text/css' media='all' />
     <link href="Css/index.css" rel="stylesheet" />
