--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Home</title>
 
-    <link rel="favicon" href="Images/logo.png">
+    <link rel="favicon" href="/Images/logo.png">
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="Content/camera.css" rel="stylesheet" id='camera-css' type='text/css' media='all' />
     <link href="Css/index.css" rel="stylesheet" />
@@ -43,7 +43,7 @@
                                 <a href="product.html">Products</a>
                             </li>
                             <li>
-                                <a href="#">Contact</a>
+                                <a href="contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
