--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
                 <header id="head">
                         <div class="fluid_container">
                             <div class="camera_wrap camera_emboss pattern_1" id="camera_wrap_4">
-                                <div data-thumb="Images/slider03.jpg" data-src="Images/slider03.jpg">
-                                    <div class="camera_caption fadeFromBottom">
-                                        Lavender
-                                    </div>
-                                </div>
                                 <div data-thumb="Images/slider01.jpg" data-src="Images/slider01.jpg">
-                                </div> 
+                                    <!--<div class="camera_caption fadeFromBottom">
+                                        Lavender
+                                    </div>-->
+                                </div>
                                 <div data-thumb="Images/slider02.jpg" data-src="Images/slider02.jpg">
                                 </div>
+                                <div data-thumb="Images/slider03.jpg" data-src="Images/slider03.jpg">
+                                </div> 
                                 <div data-thumb="Images/slider04.jpg" data-src="Images/slider04.jpg">
                                 </div>
                                 </div>
@@ -102,7 +102,7 @@
                                     Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
                                 </p>
                                 <p>
-                                    <a class="btn" href="#">Read More</a>
+                                    <a class="btn" href="javascript">Read More</a>
                                 </p>
                             </div>
                         </div>
@@ -194,7 +194,8 @@
                 </div> 
 
         </div>
-                <!--地址-->
+
+                <!--footer-->
     <footer id="footer">
             <div class="container">
                 <div class="row">
@@ -221,7 +222,6 @@
             Flows Products Display by PLJ &copy; 2019.
         </p>
     </footer>
-                <!--<address> <strong>Twitter, Inc.</strong><br /> 795 Folsom Ave, Suite 600<br /> San Francisco, CA 94107<br /> <abbr title="Phone">P:</abbr> (123) 456-7890</address>-->
 
 </body>
 </html>
