--- a/product.html
+++ b/product.html
@@ -55,7 +55,7 @@
     </nav>
 
     <div class="text-center imgcontainer">
-        <img src="Images/product01.jpg" width="70%" height="300" alt="Tulips" />
+        <img src="Images/product01.jpg" width="70%"  alt="Tulips" />
         <span class="imgname">Tulips</span>
     </div>
 
@@ -63,7 +63,7 @@
     <div class="container">
         <div class="row">
                 <h3 class="title">Rose</h3>
-            <article class="col-lg-3 col-md-3 col-sm-6">
+            <article class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                 <div class="portfolio-item">
                     <a href="Images/rose01.jpg" class="portfolio-popup">
                         <img src="Images/rose01.jpg" alt="">
@@ -76,7 +76,7 @@
                     </a>
                 </div>
             </article>
-            <article class="col-lg-3 col-md-3 col-sm-6">
+            <article class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                 <div class="portfolio-item">
                     <a href="Images/rose03.jpg" class="portfolio-popup">
                         <img src="Images/rose03.jpg" alt="">
@@ -89,7 +89,7 @@
                     </a>
                 </div>
             </article>
-            <article class="col-lg-3 col-md-3 col-sm-6">
+            <article class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                 <div class="portfolio-item">
                     <a href="Images/rose04.jpg" class="portfolio-popup">
                         <img src="Images/rose04.jpg" alt="">
@@ -102,7 +102,7 @@
                     </a>
                 </div>
             </article>
-            <article class="col-lg-3 col-md-3 col-sm-6">
+            <article class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                 <div class="portfolio-item">
                     <a href="Images/rose05.jpg" class="portfolio-popup">
                         <img src="Images/rose05.jpg" alt="">
@@ -118,7 +118,7 @@
             </div>
         <div class="row">
             <h3 class="title">Peony</h3>
-            <article class="col-lg-3 col-md-3 col-sm-6">
+            <article class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                 <div class="portfolio-item">
                     <a href="Images/peony01.jpg" class="portfolio-popup">
                         <img src="Images/peony01.jpg" alt="">
@@ -131,7 +131,7 @@
                     </a>
                 </div>
             </article>
-            <article class="col-lg-3 col-md-3 col-sm-6">
+            <article class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                 <div class="portfolio-item">
                     <a href="Images/peony02.jpg" class="portfolio-popup">
                         <img src="Images/peony02.jpg" alt="">
@@ -143,8 +143,8 @@
                         </div>
                     </a>
                 </div>
-            </article>
-            <article class="col-lg-3 col-md-3 col-sm-6">
+            </article> 
+            <article class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                 <div class="portfolio-item">
                     <a href="Images/peony03.jpg" class="portfolio-popup">
                         <img src="Images/peony03.jpg" alt="">
@@ -157,7 +157,7 @@
                     </a>
                 </div>
             </article>
-            <article class="col-lg-3 col-md-3 col-sm-6">
+            <article class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                 <div class="portfolio-item">
                     <a href="Images/peony04.jpg" class="portfolio-popup">
                         <img src="Images/peony04.jpg" alt="">
@@ -173,7 +173,7 @@
         </div>
         <div class="row">
             <h3 class="title">Lily</h3>
-            <article class="col-lg-3 col-md-3 col-sm-6">
+            <article class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                 <div class="portfolio-item">
                     <a href="Images/lily01.jpeg" class="portfolio-popup">
                         <img src="Images/lily01.jpeg" alt="">
@@ -186,7 +186,7 @@
                     </a>
                 </div>
             </article>
-            <article class="col-lg-3 col-md-3 col-sm-6">
+            <article class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                 <div class="portfolio-item">
                     <a href="Images/lily02.jpeg" class="portfolio-popup">
                         <img src="Images/lily02.jpeg" alt="">
@@ -199,7 +199,7 @@
                     </a>
                 </div>
             </article>
-            <article class="col-lg-3 col-md-3 col-sm-6">
+            <article class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                 <div class="portfolio-item">
                     <a href="Images/lily03.jpeg" class="portfolio-popup">
                         <img src="Images/lily03.jpeg" alt="">
@@ -212,7 +212,7 @@
                     </a>
                 </div>
             </article>
-            <article class="col-lg-3 col-md-3 col-sm-6">
+            <article class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                 <div class="portfolio-item">
                     <a href="Images/lily04.jpeg" class="portfolio-popup">
                         <img src="Images/lily04.jpeg" alt="">
