--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <title>Home</title>
+    <title>Flowers</title>
 
     <link rel="favicon" href="/Images/logo.png">
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
